feat: complete Phase 2-6 implementation and verification
Phase 2: Communication infrastructure + parallel execution
- Demo API (FastAPI CRUD endpoints) for pattern B verification
- 4 workers parallel execution tested successfully

Phase 3: Parallel review
- Architecture + Security review with aggregation logic
- all("approved") / any("needs_fix") working

Phase 4: git worktree integration
- worktree-create.sh / worktree-merge.sh
- Conflict auto-resolution with --auto-resolve

Phase 5: Self-improvement
- /improve command with learner agent
- Learning notes in notes/crud-api-demo/

Phase 6: GitHub Actions integration
- ensemble-action.yml for @ensemble run trigger

Test results: 109 tests passed, 82% coverage

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 queue/tasks/*.yaml
 queue/reports/*.yaml
 queue/ack/*.ack
+queue/conductor/*.yaml
+
+# Logs (transient)
+logs/
 
 # Python
 __pycache__/
