--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ensemble-ai"
+name = "ensemble-claude"
 version = "0.3.0"
 description = "AI Orchestration Tool for Claude Code - Multi-agent orchestration for complex development tasks"
 readme = "README.md"
@@ -45,6 +45,12 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/ensemble"]
+# Include non-Python template files
+artifacts = [
+    "*.md",
+    "*.yaml",
+    "*.sh",
+]
 
 [tool.hatch.build.targets.wheel.sources]
 "src" = ""
@@ -56,13 +62,6 @@ include = [
     "/README.md",
     "/LICENSE",
 ]
-
-# Include non-Python files in templates
-[tool.hatch.build.targets.wheel.force-include]
-"src/ensemble/templates/agents" = "ensemble/templates/agents"
-"src/ensemble/templates/commands" = "ensemble/templates/commands"
-"src/ensemble/templates/workflows" = "ensemble/templates/workflows"
-"src/ensemble/templates/scripts" = "ensemble/templates/scripts"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
