--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [main, "feature/**"]
+    branches: [main, "feature/**", "deploy/**"]
   pull_request:
-    branches: [main]
+    branches: [main, "deploy/**"]
 
 jobs:
   test:
