--- a/src/ensemble/templates/workflows/worktree.yaml
+++ b/src/ensemble/templates/workflows/worktree.yaml
@@ -29,7 +29,7 @@ steps:
     mode: execute
     script: |
       for branch in $WORKTREE_BRANCHES; do
-        ./scripts/worktree-create.sh "$branch" main
+        .claude/scripts/worktree-create.sh "$branch" main
       done
     transitions:
       - condition: worktrees_created
@@ -88,7 +88,7 @@ steps:
     mode: execute
     script: |
       for worktree in $WORKTREE_PATHS; do
-        ./scripts/worktree-merge.sh "$worktree" main
+        .claude/scripts/worktree-merge.sh "$worktree" main
       done
     transitions:
       - condition: merge_success
