fix: harden autonomous loop with LoopDetector, safe git add, and queue completion
- Integrate LoopDetector into AutonomousLoopRunner to prevent infinite loops
- Replace `git add .` with safe file-individual add that excludes sensitive
  files (.env, *.key, *.pem, credentials.*, etc.) in both pipeline and loop
- Add TaskQueue.complete() calls in queue mode for proper dependency resolution
- Add scan mode deduplication to skip already-processed tasks
- Add secret patterns to .gitignore and init template
- Clarify external dependencies (tmux, claude, gh) in README
- Update tests for new commit safety behavior (516 tests passing, 81% coverage)

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,16 @@ build/
 .venv/
 venv/
 
+# Secrets
+.env
+.env.*
+*.key
+*.pem
+*.p12
+*.pfx
+credentials.json
+credentials.yaml
+
 # IDE
 .idea/
 .vscode/
